--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     },
     "dependencies": {
         "@microsoft/mixed-reality-extension-sdk": "^0.20.0",
-        "@types/node": "^14.14.28"
+        "@types/node": "^14.14.28",
+        "axios": "^0.21.1"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^4.15.1",
